# sdl2-project

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE
src/: game.cpp  game.h  main.cpp  pch.h  scene.cpp  scene.h  texture.cpp  texture.h
src/scenes/: scene_main.cpp  scene_main.h
